Super long words don't break the layout anymore; Fixes #353

--- a/internal/frontend/resources/lobby.css
+++ b/internal/frontend/resources/lobby.css
@@ -154,6 +154,8 @@ kbd {
     justify-content: center;
     text-align: center;
     column-gap: 0.5rem;
+    width: 0;
+    overflow-x: hidden;
 }
 
 .hint-underline {
